--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-html, body {
+@import 'animation.css';
+html,
+body {
   margin: 0;
   padding: 0;
 }
@@ -26,7 +28,8 @@ a {
   font-family: Lucid;
   src: url('fonts/LucidaGrande.ttc') format('truetype');
 }
-h1, h2 {
+h1,
+h2 {
   font-weight: bold;
   text-align: center;
   text-shadow: 1px 1px 0 #FFFFFF;
@@ -42,7 +45,9 @@ h1, h2 {
   color: #C40000;
 }
 /* Collections */
-#red, #yellow, #green {
+#red,
+#yellow,
+#green {
   height: 10px;
   width: 11px;
 }
@@ -91,46 +96,53 @@ h1, h2 {
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-#isight, #search {
+#isight,
+#search {
   -webkit-border-radius: 25px;
   -moz-border-radius: 25px;
   -khtml-border-radius: 25px;
   border-radius: 25px;
   behavior: url(border-radius.htc);
 }
-#back, #icon-view-active {
-  -webkit-border-radius: 4px 0 0 4px;
-  -moz-border-radius: 4px 0 0 4px;
-  -khtml-border-radius: 4px 0 0 4px;
-  border-radius: 4px 0 0 4px;
+#back,
+#icon-view-active {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
   behavior: url(border-radius.htc);
 }
-#forward, #coverflow {
-  -webkit-border-radius: 0 4px 4px 0;
-  -moz-border-radius: 0 4px 4px 0;
-  -khtml-border-radius: 0 4px 4px 0;
-  border-radius: 0 4px 4px 0;
+#forward,
+#coverflow {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -khtml-border-radius: 0;
+  border-radius: 0;
   behavior: url(border-radius.htc);
 }
-.name, #iris, #gear-hole {
+.name,
+#iris,
+#gear-hole {
   -webkit-border-radius: 100px;
   -moz-border-radius: 100px;
   -khtml-border-radius: 100px;
   border-radius: 100px;
   behavior: url(border-radius.htc);
 }
-#top, #tab {
-  -webkit-border-radius: 0 0 8px 8px;
-  -moz-border-radius: 0 0 8px 8px;
-  -khtml-border-radius: 0 0 8px 8px;
-  border-radius: 0 0 8px 8px;
+#top,
+#tab {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -khtml-border-radius: 0;
+  border-radius: 0;
   behavior: url(border-radius.htc);
 }
-.folder-icon-back, #topnav {
-  -webkit-border-radius: 6px 6px 0 0;
-  -moz-border-radius: 6px 6px 0 0;
-  -khtml-border-radius: 6px 6px 0 0;
-  border-radius: 6px 6px 0 0;
+.folder-icon-back,
+#topnav {
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -khtml-border-radius: 6px;
+  border-radius: 6px;
   behavior: url(border-radius.htc);
 }
 .single,
@@ -149,10 +161,10 @@ h1, h2 {
 #dice2,
 #dice3,
 #dice4 {
-  -webkit-border-radius: 3px 0;
-  -moz-border-radius: 3px 0;
-  -khtml-border-radius: 3px 0;
-  border-radius: 3px 0;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  border-radius: 3px;
   behavior: url(border-radius.htc);
 }
 /* Macbook Pro */
@@ -168,10 +180,10 @@ h1, h2 {
   border-top: 3px solid #CBCBCB;
   border-left: 3px solid #CBCBCB;
   border-right: 3px solid #CBCBCB;
-  -webkit-border-radius: 25px 25px 0 0;
-  -moz-border-radius: 25px 25px 0 0;
-  -khtml-border-radius: 25px 25px 0 0;
-  border-radius: 25px 25px 0 0;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -khtml-border-radius: 25px;
+  border-radius: 25px;
   behavior: url(border-radius.htc);
   -moz-box-shadow: inset 0 2px 3px #A0A0A0;
   -webkit-box-shadow: inset 0 2px 3px #A0A0A0;
@@ -272,10 +284,10 @@ h1, h2 {
   width: 1090px;
   position: absolute;
   z-index: 1;
-  -webkit-border-radius: 0 0 1000px 1000px;
-  -moz-border-radius: 0 0 1000px 1000px;
-  -khtml-border-radius: 0 0 1000px 1000px;
-  border-radius: 0 0 1000px 1000px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -khtml-border-radius: 0;
+  border-radius: 0;
   behavior: url(border-radius.htc);
   background-color: #ababab;
   background-image: -webkit-gradient(linear, 0 top, 0 bottom, from(#ababab), to(#424242));
@@ -292,10 +304,10 @@ h1, h2 {
   background: rgba(109, 109, 109, 0.1);
   width: 750px;
   height: 445px;
-  -webkit-border-radius: 6px 6px 3px 3px;
-  -moz-border-radius: 6px 6px 3px 3px;
-  -khtml-border-radius: 6px 6px 3px 3px;
-  border-radius: 6px 6px 3px 3px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -khtml-border-radius: 6px;
+  border-radius: 6px;
   behavior: url(border-radius.htc);
   -webkit-box-shadow: 0 0 25px 0 #444444;
   -moz-box-shadow: 0 0 25px 0 #444444;
@@ -814,10 +826,10 @@ h1, h2 {
   width: 14px;
   margin-top: 3px;
   margin-left: 12px;
-  -webkit-border-radius: 20px 5px;
-  -moz-border-radius: 20px 5px;
-  -khtml-border-radius: 20px 5px;
-  border-radius: 20px 5px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -khtml-border-radius: 20px;
+  border-radius: 20px;
   behavior: url(border-radius.htc);
   background-color: #070707;
   background-image: -webkit-gradient(linear, 0 top, 0 bottom, from(#070707), to(#434343));
@@ -1138,10 +1150,10 @@ h1, h2 {
   height: 2px;
   width: 38px;
   margin-left: 4px;
-  -webkit-border-radius: 3px 3px 0 0;
-  -moz-border-radius: 3px 3px 0 0;
-  -khtml-border-radius: 3px 3px 0 0;
-  border-radius: 3px 3px 0 0;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  border-radius: 3px;
   behavior: url(border-radius.htc);
   background-color: #80b2d3;
   background-image: -webkit-gradient(linear, 0 top, 0 bottom, from(#80b2d3), to(#65a1ca));
@@ -1158,10 +1170,10 @@ h1, h2 {
   width: 44px;
   border: 1px solid #8cb5d4;
   border-bottom: 1px solid #6a8ea9;
-  -webkit-border-radius: 5px 5px 3px 3px;
-  -moz-border-radius: 5px 5px 3px 3px;
-  -khtml-border-radius: 5px 5px 3px 3px;
-  border-radius: 5px 5px 3px 3px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
   behavior: url(border-radius.htc);
   -moz-box-shadow: 0 3px 3px -2px #000000;
   -webkit-box-shadow: 0 3px 3px -2px #000000;
@@ -1201,7 +1213,6 @@ h1, h2 {
   margin: -3px 2px 2px 0;
 }
 .small-arrow {
-  float: left;
   border-color: transparent transparent transparent #919191;
   border-style: solid;
   border-width: 2px 0 2px 4px;
@@ -1215,10 +1226,10 @@ h1, h2 {
   float: left;
   height: 22px;
   width: 100%;
-  -webkit-border-radius: 0 0 3px 3px;
-  -moz-border-radius: 0 0 3px 3px;
-  -khtml-border-radius: 0 0 3px 3px;
-  border-radius: 0 0 3px 3px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -khtml-border-radius: 0;
+  border-radius: 0;
   behavior: url(border-radius.htc);
   border-top: 1px solid #515151;
   -moz-box-shadow: inset 0 1px 0 #DCDCDC;
@@ -1390,6 +1401,14 @@ footer {
   padding-bottom: 10px;
   text-align: center;
   font-size: 8pt;
+}
+/* Coffeescript CSS */
+.rotate-90 {
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
 /* Lion/iOS scrollbars */
 ::-webkit-scrollbar {
