--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,7 @@ h2 {
 #radio-hole {
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
-  -khtml-border-radius: 50px;
   border-radius: 50px;
-  behavior: url(border-radius.htc);
 }
 .single,
 #back,
@@ -92,58 +90,80 @@ h2 {
 #small {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 #isight,
 #search {
   -webkit-border-radius: 25px;
   -moz-border-radius: 25px;
-  -khtml-border-radius: 25px;
   border-radius: 25px;
-  behavior: url(border-radius.htc);
 }
 #back,
 #icon-view-active {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -khtml-border-radius: 4px;
-  border-radius: 4px;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 0;
+  -webkit-border-bottom-left-radius: 4px;
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 0;
+  -moz-border-radius-bottomleft: 4px;
+  -moz-border-radius-topleft: 4px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
 }
 #forward,
 #coverflow {
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -khtml-border-radius: 0;
-  border-radius: 0;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  -webkit-border-bottom-left-radius: 0;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 4px;
+  -moz-border-radius-bottomright: 4px;
+  -moz-border-radius-bottomleft: 0;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
 .name,
 #iris,
 #gear-hole {
   -webkit-border-radius: 100px;
   -moz-border-radius: 100px;
-  -khtml-border-radius: 100px;
   border-radius: 100px;
-  behavior: url(border-radius.htc);
 }
 #top,
 #tab {
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -khtml-border-radius: 0;
-  border-radius: 0;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 8px;
+  -webkit-border-bottom-left-radius: 8px;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 8px;
+  -moz-border-radius-bottomleft: 8px;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 0;
 }
 .folder-icon-back,
 #topnav {
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  -khtml-border-radius: 6px;
-  border-radius: 6px;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 6px;
+  -webkit-border-bottom-right-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+  -webkit-border-top-left-radius: 6px;
+  -moz-border-radius-topright: 6px;
+  -moz-border-radius-bottomright: 0;
+  -moz-border-radius-bottomleft: 0;
+  -moz-border-radius-topleft: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 6px;
 }
 .single,
 #nav,
@@ -153,19 +173,24 @@ h2 {
 #active-folder {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
-  -khtml-border-radius: 4px;
   border-radius: 4px;
-  behavior: url(border-radius.htc);
 }
 #dice1,
 #dice2,
 #dice3,
 #dice4 {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -khtml-border-radius: 3px;
-  border-radius: 3px;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 0;
+  -webkit-border-top-left-radius: 3px;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 3px;
+  -moz-border-radius-bottomleft: 0;
+  -moz-border-radius-topleft: 3px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 3px;
 }
 /* Macbook Pro */
 #macbook {
@@ -180,11 +205,18 @@ h2 {
   border-top: 3px solid #CBCBCB;
   border-left: 3px solid #CBCBCB;
   border-right: 3px solid #CBCBCB;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  -khtml-border-radius: 25px;
-  border-radius: 25px;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 25px;
+  -webkit-border-bottom-right-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+  -webkit-border-top-left-radius: 25px;
+  -moz-border-radius-topright: 25px;
+  -moz-border-radius-bottomright: 0;
+  -moz-border-radius-bottomleft: 0;
+  -moz-border-radius-topleft: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 25px;
   -moz-box-shadow: inset 0 2px 3px #A0A0A0;
   -webkit-box-shadow: inset 0 2px 3px #A0A0A0;
   box-shadow: inset 0 2px 3px #A0A0A0;
@@ -284,11 +316,18 @@ h2 {
   width: 1090px;
   position: absolute;
   z-index: 1;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -khtml-border-radius: 0;
-  border-radius: 0;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 1000px;
+  -webkit-border-bottom-left-radius: 1000px;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 1000px;
+  -moz-border-radius-bottomleft: 1000px;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 1000px;
+  border-bottom-left-radius: 1000px;
+  border-top-left-radius: 0;
   background-color: #ababab;
   background-image: -webkit-gradient(linear, 0 top, 0 bottom, from(#ababab), to(#424242));
   background-image: -webkit-linear-gradient(#ababab, #424242);
@@ -304,11 +343,18 @@ h2 {
   background: rgba(109, 109, 109, 0.1);
   width: 750px;
   height: 445px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  -khtml-border-radius: 6px;
-  border-radius: 6px;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 6px;
+  -webkit-border-bottom-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -webkit-border-top-left-radius: 6px;
+  -moz-border-radius-topright: 6px;
+  -moz-border-radius-bottomright: 3px;
+  -moz-border-radius-bottomleft: 3px;
+  -moz-border-radius-topleft: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 6px;
   -webkit-box-shadow: 0 0 25px 0 #444444;
   -moz-box-shadow: 0 0 25px 0 #444444;
   box-shadow: 0 0 25px 0 #444444;
@@ -826,11 +872,18 @@ h2 {
   width: 14px;
   margin-top: 3px;
   margin-left: 12px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -khtml-border-radius: 20px;
-  border-radius: 20px;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 5px;
+  -webkit-border-bottom-right-radius: 20px;
+  -webkit-border-bottom-left-radius: 5px;
+  -webkit-border-top-left-radius: 20px;
+  -moz-border-radius-topright: 5px;
+  -moz-border-radius-bottomright: 20px;
+  -moz-border-radius-bottomleft: 5px;
+  -moz-border-radius-topleft: 20px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 20px;
   background-color: #070707;
   background-image: -webkit-gradient(linear, 0 top, 0 bottom, from(#070707), to(#434343));
   background-image: -webkit-linear-gradient(#070707, #434343);
@@ -871,9 +924,7 @@ h2 {
   background: rgba(255, 255, 255, 0.9);
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
-  -khtml-border-radius: 8px;
   border-radius: 8px;
-  behavior: url(border-radius.htc);
   border: 1px solid #bbbbbb;
   width: 190px;
   height: 140px;
@@ -921,8 +972,6 @@ h2 {
   background: #2F2F2F;
   -webkit-transform: rotate(-40deg);
   -moz-transform: rotate(-40deg);
-  -ms-transform: rotate(-40deg);
-  -o-transform: rotate(-40deg);
   transform: rotate(-40deg);
 }
 #gear4 {
@@ -1051,8 +1100,6 @@ h2 {
   transition: all 0.1s ease-in-out;
   -webkit-transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  -o-transform: rotate(-90deg);
   transform: rotate(-90deg);
 }
 .arrow2:active {
@@ -1150,11 +1197,18 @@ h2 {
   height: 2px;
   width: 38px;
   margin-left: 4px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -khtml-border-radius: 3px;
-  border-radius: 3px;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+  -webkit-border-top-left-radius: 3px;
+  -moz-border-radius-topright: 3px;
+  -moz-border-radius-bottomright: 0;
+  -moz-border-radius-bottomleft: 0;
+  -moz-border-radius-topleft: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 3px;
   background-color: #80b2d3;
   background-image: -webkit-gradient(linear, 0 top, 0 bottom, from(#80b2d3), to(#65a1ca));
   background-image: -webkit-linear-gradient(#80b2d3, #65a1ca);
@@ -1170,11 +1224,18 @@ h2 {
   width: 44px;
   border: 1px solid #8cb5d4;
   border-bottom: 1px solid #6a8ea9;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 5px;
+  -webkit-border-bottom-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -webkit-border-top-left-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  -moz-border-radius-bottomright: 3px;
+  -moz-border-radius-bottomleft: 3px;
+  -moz-border-radius-topleft: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 5px;
   -moz-box-shadow: 0 3px 3px -2px #000000;
   -webkit-box-shadow: 0 3px 3px -2px #000000;
   box-shadow: 0 3px 3px -2px #000000;
@@ -1226,11 +1287,18 @@ h2 {
   float: left;
   height: 22px;
   width: 100%;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -khtml-border-radius: 0;
-  border-radius: 0;
-  behavior: url(border-radius.htc);
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 3px;
+  -moz-border-radius-bottomleft: 3px;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 0;
   border-top: 1px solid #515151;
   -moz-box-shadow: inset 0 1px 0 #DCDCDC;
   -webkit-box-shadow: inset 0 1px 0 #DCDCDC;
@@ -1406,8 +1474,6 @@ footer {
 .rotate-90 {
   -webkit-transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  -o-transform: rotate(-90deg);
   transform: rotate(-90deg);
 }
 /* Lion/iOS scrollbars */
