--- a/css/style.less
+++ b/css/style.less
@@ -12,19 +12,30 @@
 	background-repeat: no-repeat;
 }
 
-.border-radius(@radius: 50px) {
+.rounded(@radius: 50px) {
 	-webkit-border-radius: @radius;
 	-moz-border-radius: @radius;
-	-khtml-border-radius: @radius;
 	border-radius: @radius;
-	behavior: url(border-radius.htc);
+}
+
+.border-radius(@topleft: 0, @topright: 0, @bottomright: 0, @bottomleft: 0) {
+	-webkit-border-top-right-radius: @topright;
+	-webkit-border-bottom-right-radius: @bottomright;
+	-webkit-border-bottom-left-radius: @bottomleft;
+	-webkit-border-top-left-radius: @topleft;
+	-moz-border-radius-topright: @topright;
+	-moz-border-radius-bottomright: @bottomright;
+	-moz-border-radius-bottomleft: @bottomleft;
+	-moz-border-radius-topleft: @topleft;
+	border-top-right-radius: @topright;
+	border-bottom-right-radius: @bottomright;
+	border-bottom-left-radius: @bottomleft;
+	border-top-left-radius: @topleft;
 }
 
 .rotate(@deg: 45deg) {
 	-webkit-transform: rotate(@deg);
 	-moz-transform: rotate(@deg);
-	-ms-transform: rotate(@deg);
-	-o-transform: rotate(@deg);
 	transform: rotate(@deg);
 }
 
@@ -105,7 +116,7 @@ h2 {
 #sizebar,
 #radio,
 #radio-hole {
-	.border-radius;
+	.rounded;
 }
 
 .single,
@@ -127,33 +138,33 @@ h2 {
 
 #isight,
 #search {
-	.border-radius(25px);
+	.rounded(25px);
 }
 
 #back,
 #icon-view-active {
-	.border-radius(4px 0 0 4px);
+	.border-radius(4px, 0, 0, 4px);
 }
 
 #forward,
 #coverflow {
-	.border-radius(0 4px 4px 0);
+	.border-radius(0, 4px, 4px, 0);
 }
 
 .name,
 #iris,
 #gear-hole {
-	.border-radius(100px);
+	.rounded(100px);
 }
 
 #top,
 #tab {
-	.border-radius(0 0 8px 8px);
+	.border-radius(0, 0, 8px, 8px);
 }
 
 .folder-icon-back,
 #topnav {
-	.border-radius(6px 6px 0 0);
+	.border-radius(6px, 6px, 0, 0);
 }
 
 .single,
@@ -162,14 +173,14 @@ h2 {
 #quicklook,
 #settings,
 #active-folder {
-	.border-radius(4px);
+	.rounded(4px);
 }
 
 #dice1,
 #dice2,
 #dice3,
 #dice4 {
-	.border-radius(3px 0);
+	.border-radius(3px, 0, 3px, 0);
 }
 
 /* Macbook Pro */
@@ -187,7 +198,7 @@ h2 {
 	border-top: 3px solid #CBCBCB;
 	border-left: 3px solid #CBCBCB;
 	border-right: 3px solid #CBCBCB;
-	.border-radius(25px 25px 0 0);
+	.border-radius(25px, 25px, 0, 0);
 	-moz-box-shadow: inset 0 2px 3px #A0A0A0;
 	-webkit-box-shadow: inset 0 2px 3px #A0A0A0;
 	box-shadow: inset 0 2px 3px #A0A0A0;
@@ -288,7 +299,7 @@ h2 {
 	width:1090px;
 	position: absolute;
 	z-index: 1;
-	.border-radius(0 0 1000px 1000px);
+	.border-radius(0, 0, 1000px, 1000px);
 	.gradient(#ABABAB, #424242);
 }
 
@@ -298,7 +309,7 @@ h2 {
 	background: rgba(109,109,109,0.1);
 	width: 750px;
 	height: 445px;
-	.border-radius(6px 6px 3px 3px);
+	.border-radius(6px, 6px, 3px, 3px);
 	-webkit-box-shadow: 0 0 25px 0 #444444;
 	-moz-box-shadow: 0 0 25px 0 #444444;
 	box-shadow: 0 0 25px 0 #444444;
@@ -813,7 +824,7 @@ h2 {
 	width: 14px;
 	margin-top: 3px;
 	margin-left: 12px;
-	.border-radius(20px 5px);
+	.border-radius(20px, 5px, 20px, 5px);
 	.gradient(#070707, #434343);
 	-moz-box-shadow: 0 1px 0 #DBDBDB;
 	-webkit-box-shadow: 0 1px 0 #DBDBDB;
@@ -848,7 +859,7 @@ h2 {
 
 #settingsmenu {
 	background: rgba(255,255,255,0.9);
-	.border-radius(8px);
+	.rounded(8px);
 	border: 1px solid #bbbbbb;
 	width: 190px;
 	height: 140px;
@@ -1153,7 +1164,7 @@ h2 {
 	height: 2px;
 	width: 38px;
 	margin-left: 4px;
-	.border-radius(3px 3px 0 0);
+	.border-radius(3px, 3px, 0, 0);
 	.gradient(#80b2d3, #65a1ca);
 }
 
@@ -1162,7 +1173,7 @@ h2 {
 	width: 44px;
 	border: 1px solid #8cb5d4;
 	border-bottom: 1px solid #6a8ea9;
-	.border-radius(5px 5px 3px 3px);
+	.border-radius(5px, 5px, 3px, 3px);
 	-moz-box-shadow: 0 3px 3px -2px #000000;
 	-webkit-box-shadow: 0 3px 3px -2px #000000;
 	box-shadow: 0 3px 3px -2px #000000;
@@ -1213,7 +1224,7 @@ h2 {
 	float: left;
 	height: 22px;
 	width: 100%;
-	.border-radius(0 0 3px 3px);
+	.border-radius(0, 0, 3px, 3px);
 	border-top: 1px solid #515151;
 	-moz-box-shadow: inset 0 1px 0 #DCDCDC;
 	-webkit-box-shadow: inset 0 1px 0 #DCDCDC;
